# load-balancer

./: Cargo.toml
.github/workflows/: ci.yml
crates/api-key/: Cargo.toml
crates/api-key/src/: config.rs  data.rs  error.rs  hash.rs  lib.rs  parse.rs  token.rs  verify.rs
crates/load-balancer/: Cargo.toml
crates/load-balancer-switcher/: Cargo.toml
crates/load-balancer/examples/: upstream.rs
crates/load-balancer/sql/: accounts.sql  usage.sql
crates/load-balancer/src/: accounts.rs  configuration.rs  lb.rs  lib.rs  main.rs  server.rs  upstream.rs  usage.rs
crates/load-balancer/test_data/: accounts.db  backend.yml  pingora.conf
crates/load-balancer/tests/: integration_test.rs
docs/research/: background_thread.md  dual_id_pattern.md  prometheus_metrics.md  secure_api_key.md
src/: lib.rs  main.rs  metric.rs  throttle.rs
