[package]
name = "load-balancer"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
env_logger = "0.11.8"
log = "0.4.29"
pingora = { version = "0.6.0", features = ["lb", "proxy", "time"] }
pingora-limits = "0.6.0"
rusqlite = { version = "0.36", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.34"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros", "sync", "net"] }

[dev-dependencies]
axum = "0.8.8"
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "net", "sync"] }
clap = { version = "4.5", features = ["derive"] }
